kubernetes/data-lakehouse/base/management/bytebase/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bytebase
  namespace: data
spec:
  selector:
    app: bytebase
  ports:
    - name: http
      port: 8080
      targetPort: 8080
