kubernetes/data-lakehouse/base/management/bytebase/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bytebase
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`bytebase.${cluster_domain}`)
      kind: Rule
      services:
        - name: bytebase-entrypoint
          port: 80
